# gz-plugin-multicopter-velocity-tuning

./: LICENSE  README.md
multicopter_control_tunable/: CMakeLists.txt  Common.cc  Common.hh  LeeVelocityController.cc  LeeVelocityController.hh  MulticopterVelocityControlTunable.cc  MulticopterVelocityControlTunable.hh  Parameters.hh
tuning_gui/: TuningPlugin.cc  TuningPlugin.hh  TuningPlugin.qml
